# QT-MVVM

./: AppContext.cpp  AppContext.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Topic设计规范.md  logs.db  main.cpp  run_trace.db
.backup/log_module/: LogEntry.h  LogModel.cpp  LogModel.h
Document/: 什么时候该拆 Page  Widget  ViewModel 决策表.md  馃摌 MediatorMVAQt 浣跨敤澶х翰.md  📘 MediatorMVAQt 使用大纲.md  📘 README.md
app/: AppContext.cpp  AppContext.h  Bootstrap.cpp  Bootstrap.h  Tags.h
app/config/: AppConfig.h  ConfigLoader.h
app/di/: IModelFactory.h  ModelFactory.h
app/log/: Logger.cpp  Logger.h
common/: TestStruct.h  TypeKey.h
core/: CMakeLists.txt
core/actor/: Actor.cpp  Actor.h  ActorObserve.cpp  ActorObserve.h
core/app/: AppContext.cpp  AppContext.h  Bootstrap.cpp  Bootstrap.h
core/binding/: Binding.h  BindingCommand.h  BindingCommandHelpers.h  BindingEvents.h  BindingEventsHelpers.h  BindingHelper.h  EventCommandFilter.h  PropertyBindingAdapter.h
core/command/: DispatcherCommand.h  ICommand.h  SimpleCommand.h
core/mediator/: Mediator.cpp  Mediator.h  Observe.cpp  Observe.h  Topic.cpp  Topic.h  TopicMeta.h  TopicRegistry.cpp  TopicRegistry.h
core/model/: BaseModel.cpp  BaseModel.h  IModel.h  LogEntry.h  LogModel.cpp  LogModel.h
core/policy/: AlwaysPolicy.h  ISubscriptionPolicy.h  StickyPolicy.h  ValueChangedPolicy.h
core/transport/: ITransport.h
core/view/: LogListView.cpp  LogListView.h
core/viewmodel/: BaseViewModel.h  LogListViewModel.cpp  LogListViewModel.h
docs/: CHANGELOG.md  MediatorMVAQt 架构文档.md  修改日志_2026-03-24.md
model/: BaseModel.cpp  BaseModel.h  LogEntry.h  LogModel.cpp  LogModel.h  LoggerActor.h  RecorderActor.h  SQLiteRecorderActor.cpp  SQLiteRecorderActor.h  SensorModel.cpp  SensorModel.h  UserModel.cpp  UserModel.h
model/modbus/: ModbusMasterModel.cpp  ModbusMasterModel.h  ModbusModuleBase.cpp  ModbusModuleBase.h  PidPressureModule.cpp  PidPressureModule.h  PointDef.h
view/: BaseView.h  LabelViewObserve.cpp  LabelViewObserve.h  LogListView.cpp  LogListView.h  TraceViewer.cpp  TraceViewer.h
view/binding/: Binding.h  BindingCommand.h  BindingHelper.h
viewmodel/: BaseViewModel.h  LogListViewModel.cpp  LogListViewModel.h  SensorViewModel.cpp  SensorViewModel.h  UserViewModel.cpp  UserViewModel.h
